syntax = "proto3";

package grpcadapter;

import "github.com/golang/protobuf/ptypes/empty/empty.proto";

service PolicyAdapter {
    rpc loadPolicy(google.protobuf.Empty) returns (Policies) {}
    rpc savePolicy(Policies) returns (google.protobuf.Empty) {}
    rpc addPolicy(AddPolicyReq) returns (google.protobuf.Empty) {}
    rpc removePolicy(RemovePolicyReq) returns (google.protobuf.Empty) {}
    rpc removeFilteredPolicy(RemoveFilteredPolicyReq) returns (google.protobuf.Empty) {}
}

message Policy {
    string ptype = 1;
    repeated string rule = 2;
}

message Policies {
    repeated Policy policies = 1;
}

message AddPolicyReq {
    string sec = 1;
    string ptype = 2;
    repeated string rule = 3;
}

message RemovePolicyReq {
    string sec = 1;
    string ptype = 2;
    repeated string rule = 3;
}

message RemoveFilteredPolicyReq {
    string sec = 1;
    string ptype = 2;
    int64 fieldIndex = 3;
    repeated string fieldValues = 4;
}
